ah yes automatic
